# cyanure_gpu

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  benchmarks.html  benchopt.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  references.html  run.py  search.html  searchindex.js  setup.py  tutorials.html  welcome.html
.doctrees/: benchmarks.doctree  benchopt.doctree  environment.pickle  index.doctree  references.doctree  tutorials.doctree  welcome.doctree
.doctrees/pythonAPI/: data_processing.doctree  estimators.doctree  pythonAPI.doctree
.github/workflows/: develop.yml  doc.yml  main.yml
_modules/: index.html
_modules/cyanureGPU/: data_processing.html  estimators.html
_modules/cyanure_gpu/: data_processing.html  estimators.html
_modules/cyanure_pytorch/: data_processing.html  estimators.html
_sources/: benchmarks.rst.txt  references.rst.txt  tutorials.rst.txt  welcome.rst.txt
_sources/pythonAPI/: data_processing.rst.txt  estimators.rst.txt
cyanure/: constants.py  data_processing.py  estimators.py
cyanure/erm/: data.py  erm.py  simple_erm.py
cyanure/losses/: loss.py  square.py
cyanure/regularizers/: regularizer.py  ridge.py
cyanure/solvers/: ista.py  solver.py
cyanureGPU/solvers/: incremental.py  miso.py
cyanure_pytorch/: constants.py  data_processing.py  estimators.py  logger.py
cyanure_pytorch/erm/: algebra.py  erm.py  multi_erm.py  simple_erm.py
docs/: main.tex
pythonAPI/: data_processing.html  estimators.html  pythonAPI.html
test/: test_active_set.py  test_logistic_regression.py
(+26 files in other folders)
