[build-system]
requires = [
    "setuptools==58.0.4",
    "wheel==0.37.0",
    "scipy<=1.8.1;python_version<'3.11'", "scipy>=1.8.1;python_version>='3.11'",
    "numpy>=1.23.5;python_version>='3.11'", "numpy<=1.23.5;python_version<'3.11'",
    "scikit-learn",
    "torch"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.windows]
skip = ["cp36-*", "cp37-*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sklearn.exceptions.ConvergenceWarning"
]